--- a/CS5489.md
+++ b/CS5489.md
@@ -1,1 +1,22 @@
+**Lecture 1.1  Machine Learning**  
 
+1.course information  
+
+70% coursework
+30% final exam  
+
+formal prerequisites:  
+Linear Algebra  
+Calculus  
+Probability and Statistics  
+Optimization  
+
+Self-Evaluation:  
+row vector  
+column vector  
+maximum likelihood estimation (MLE) : 最大似然估计
+maximum a posteriori (MAP) : 最大后验概率  
+gradient descent : 梯度下降  
+stochastic gradient descent : 随机梯度下降  
+principal components analysis (PCA) : 主成分分析
+singular value decomposition (SVD) : 奇异值分解
